Panels 6.x-3.x-dev
==================
#606980 by Deciphered and sethfreach: Typo caused panel-pane class to disappear if another class was assigned.
#607242: Using the wrong variable in hook_block can cause title to not be overridable.

Panels 6.x-3.1
==============

#552846 by eMPee584: Fix notice with tablesorts on mini panels page if no mini panels exist.
#568218: Links to clone, export, delete/revert, enable/disable variants from the main summary page were incorrect and led to an operation trail not found message.
#533724: Prevent Panels from upgrading while uninstalled, as that upgrades into broken pages.
#529816: Allow flexible layout to add custom classes to each region.
Rearrange the pane dropdown menus to be better organized and look a little nicer.
Add a new field to allow setting a panel title from one of its panes.
#562560 by Damien McKenna: Integration with export.module
#583172 by jacine: Turn panel pane into a template, as it always should have been.
#604404: Make sure caching does not trigger for form POSTs.

Panels 6.x-3.0
==============

#529258 by stella: Attempting to modify CSS properties on mini panel causes ajax failure.
#537430 by dereine: Fix untranslatable strings in panels dashboard template.
#530104 by stella: Fix import problem with mini panels.
#535606: Mini panel deletion deleted all block config of all mini panels.
#539418 by esmerel: Remove reference to panel page from module description.
#535722: Fix incorrect "title" tag on categories in add content modal.
Fix a bug with drag and drop UI that caused panes to break after other panes were added.
#538900: Fix bug with flexible when having multiple regions of the same name if they have a space.
#552014: Hide Substitutions fieldset if there are no contexts.
#552006: Add Content modal now opens to explanatory text instead of the first category.
#553392 by lee20: Fix node allowed layouts not properly respected on edit layout screen.

Panels 6.x-3.0-rc1
==================
