@@ -1,4 +1,4 @@
-/* $Id: panels_dnd.css,v 1.3.2.11 2009/10/07 22:20:29 merlinofchaos Exp $ */
+/* $Id: panels_dnd.css,v 1.3.2.12 2009/10/21 21:02:24 merlinofchaos Exp $ */
 
 #panels-dnd-main {
   margin: 0.5em 0;
@@ -529,6 +529,11 @@ html.js #panels-dnd-main div.ctools-dropdown div.ctools-dropdown-container ul li
 html.js div.panels-display-links div.ctools-dropdown-container ul li span.panels-text {
   width: auto;
   padding: 0 10px;
+}
+
+html.js #panels-dnd-main div.ctools-dropdown div.ctools-dropdown-container ul li .panels-italic,
+html.js div.panels-display-links div.ctools-dropdown-container ul li .panels-italic {
+  font-style: italic;
 }
 
 html.js #panels-dnd-main div.ctools-dropdown div.ctools-dropdown-container ul li span.dropdown-header,
